--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </head>
     <body>
         <div class="container">
-            <div id="Title2020"></div>
+            <div class="Title2020"></div>
             <div class="animation">
                 
             </div>
